feat: Enable React and TypeScript compilation via Babel
Integrates Babel Standalone into the HTML to allow direct execution of TypeScript and JSX code in the browser. This simplifies local development by removing the need for a separate build step for these frontend files.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>お月さまの満ち欠け探検隊</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Zen+Maru+Gothic:wght@400;700&display=swap" rel="stylesheet">
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <script>
       tailwind.config = {
         theme: {
@@ -67,6 +68,6 @@
 </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="./index.tsx"></script>
+    <script type="text/babel" data-type="module" data-presets="react,typescript" src="./index.tsx"></script>
   </body>
 </html>
